# oWo-syslog

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
dependencies/: CMakeLists.txt
doc/: CMakeLists.txt  file_registery.tex  oWoUtils.sty  transcript_2019-02-13.tex
include/: CMakeLists.txt  oWoSyslog.h
src/: CMakeLists.txt
src/TestHeader/: CMakeLists.txt  main.cpp
src/TestHeader/testfiles/: CMakeLists.txt  TestFacilities.cpp  TestHelpers.h  TestPriorities.cpp
src/TestoWoSyslog/: CMakeLists.txt  main.cpp
src/header/: CMakeLists.txt  CurrentTimeFunctor.cpp  CurrentTimeFunctor.h  header.cpp
